--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Cosmic City</title>
+    <link href="./homepage.css" >
+</head>
+<h1 >Welcome to the Cosmic City</h1>
+<body>
+    
+</body>
+</html>
