--- a/First Page/index.html
+++ b/First Page/index.html
@@ -1,13 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cosmic City</title>
-    <link href="./homepage.css" >
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Cosmic City</title>
 </head>
-<h1 >Welcome to the Cosmic City</h1>
 <body>
-    
+  <div class="header">
+    <h1>Welcome to the Cosmic City</h1>
+  </div>
+  <div class="nav">
+    <a href="#">Home</a>
+    <a href="#">About</a>
+    <a href="#">Services</a>
+    <a href="#">Contact</a>
+  </div>
+  <div class="content">
+    <h2>About Me</h2>
+    <p>This is a paragraph about myself. You can replace this text with your own content.</p>
+  </div>
+  <div class="footer">
+    <p>Copyright © 2024</p>
+  </div>
 </body>
 </html>
+
