--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 </head>
 <body>
     <h1>Welcome to the Cosmic City</h1>
+    <p>this is the ultimate place to hangout,chat and play games</p>
     <a href="#">Home</a>
     <a href="#">About</a>
     <a href="#">Services</a>
     <a href="#">Contact</a>
     <h2>About Me</h2>
-    <p>This is a paragraph about myself. You can replace this text with your own content.</p>
     <p>Copyright © 2024</p>
 </body>
 </html>
