--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <a href="#">Services</a>
     <a href="#">Contact</a>
     <h2>About Me</h2>
+    <div="footer"></div>
     <p>Copyright © 2024</p>
 </body>
 </html>
