--- a/index.html
+++ b/index.html
@@ -3,57 +3,10 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<style>body{ body{
-    font-family: 'Arial', sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: black;
-  }
-  .header {
-    background-color: #333;
-    color: #fff;
-    padding: 10px 0;
-    text-align: center;
-  }
-  .nav {
-    display: flex;
-    justify-content: center;
-    background-color: #444;
-    padding: 10px 0;
-  }
-  .nav a {
-    color: #fff;
-    text-decoration: none;
-    padding: 0 15px;
-  }
-  .nav a:hover {
-    background-color: #555;
-  }
-  .content {
-    padding: 20px;
-    text-align: center;
-  }
-  .footer {
-    background-color: #333;
-    color: #fff;
-    text-align: center;
-    padding: 10px 0;
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-  }
-}</style>
+      <script src="https://cdn.tailwindcss.com"></script>
 <title>Cosmic City</title>
 </head>
-<body>
-    <h1>Welcome to the Cosmic City</h1>
-    <p>this is the ultimate place to hangout,chat and play games</p>
-    <a href="#">Home</a>
-    <a href="#">About</a>
-    <a href="#">Services</a>
-    <a href="#">Contact</a>
-    <h2>About Me</h2>
-    <div="footer"></div>
-    <p>Copyright © 2024</p>
+<body class="flex justify-center text-center">
+    <main><h2 class="text-xl font-bold"></h2>/main>
 </body>
 </html>
