--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 <title>Cosmic City</title>
 </head>
 <body class="flex justify-center text-center">
-    <main><h2 class="text-xl font-bold"></h2>/main>
+    <main><h2 class="text-xl font-bold"></h2></main>
 </body>
 </html>
