--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <title>Cosmic City</title>
 </head>
 <body class="flex justify-center text-center">
-    <main><h2 class="text-xl font-bold"></h2></main>
+    <main><h2 class="text-xl font-bold">Welcome to the Cosmic City</h2></main>
+    <h1>Welcome to the Cosmic City</h1>
 </body>
 </html>
