--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <title>Cosmic City</title>
 </head>
 <body class="flex justify-center text-center">
-    <main><h2 class="text-xl font-bold">Welcome to the Cosmic City</h2></main>
+    <main><h2>Welcome to the Cosmic City</h2></main>
     <h1>This it the place for hanging out, playing games, And just having fun in general!</h1>
 </body>
 </html>
