--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <title>Cosmic City</title>
 </head>
 <body class="flex justify-center text-center">
-    <main><h2>Welcome to the Cosmic City</h2></main>
-    <h1>This it the place for hanging out, playing games, And just having fun in general!</h1>
+    <h1>Welcome to the Cosmic City</h1>
+    <h5>This it the place for hanging out, playing games, And just having fun in general!</h5>
 </body>
 </html>
