--- a/index.html
+++ b/index.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="/logo.svg" type="image/svg" />
-    <title>Cosmic City</title>
-  </head>
-  <body>
-    <h2>Welcome to the Cosmic City</h2>
-    <p>
-      This it the place for Hanging out, Playing games, And just having fun in
-      general!
-    </p>
-  </body>
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <script src="https://cdn.tailwindcss.com"></script>
+<title>Cosmic City</title>
+</head>
+<body class="flex justify-center text-center">
+    <main><h2 class="text-xl font-bold">Welcome to the Cosmic City</h2></main>
+    
+    <h1>This it the place for Hanging out, Playing games, And just having fun in general!</h1>
+</body>
 </html>
