--- a/404.html
+++ b/404.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="/logo.svg" type="image/svg" />
+    <link rel="stylesheet" href="/styles.css" />
+    <script src="/assets/navigationLoader.js"></script>
     <title>404</title>
   </head>
   <body>
-    <h2>404</h2>
-    <p>We could not find that page</p>
+    <main>
+      <h2>404</h2>
+      <p>We could not find that page</p>
+    </main>
   </body>
 </html>
