--- a/index.html
+++ b/index.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <script src="https://cdn.tailwindcss.com"></script>
-<title>Cosmic City</title>
-</head>
-<body class="flex justify-center text-center">
-    <main><h2 class="text-xl font-bold">Welcome to the Cosmic City</h2></main>
-    
-    <h1>This it the place for Hanging out, Playing games, And just having fun in general!</h1>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="/logo.svg" type="image/svg" />
+    <link rel="stylesheet" href="/styles.css" />
+    <script src="/assets/navigationLoader.js"></script>
+    <title>Cosmic City</title>
+  </head>
+  <body>
+    <main>
+      <h2>Cosmic City</h2>
+      <p>
+        We'd love to welcome you to the online city for for hanging out, playing
+        games, And just having fun in general!
+      </p>
+    </main>
+  </body>
 </html>
