--- a/404.html
+++ b/404.html
@@ -11,7 +11,7 @@
   <body>
     <main>
       <h2>404</h2>
-      <p>We could not find that page</p>
+      <p>We could not find that page or are still working on it</p>
     </main>
   </body>
 </html>
