--- a/chat.html
+++ b/chat.html
@@ -9,6 +9,7 @@
     <title>Cosmic City | Chat</title>
 </head>
 <body>
-    
+    nate can you add the discord server i send you it might take a bit to send though
+    <iframe></iframe>
 </body>
 </html>
