--- a/404.html
+++ b/404.html
@@ -6,11 +6,11 @@
     <link rel="shortcut icon" href="/logo.svg" type="image/svg" />
     <link rel="stylesheet" href="/styles.css" />
     <script src="/assets/navigationLoader.js"></script>
-    <title>404</title>
+    <title>ERROR 404</title>
   </head>
   <body>
     <main>
-      <h2>404</h2>
+      <h2>404 Try again</h2>
       <p>We could not find that page or are still working on it</p>
     </main>
   </body>
