--- a/news.html
+++ b/news.html
@@ -9,6 +9,12 @@
     <title>Cosmic City | News</title>
 </head>
 <body>
-    
+  <h4>Bay area Schools on high alert</h4>
+   <p>Multiple Bay Area school districts were on high alert Wednesday in response to bomb threats that called for the release of Russian prisoners.
+    In a letter home to families, Erik Faulkner, assistant superintendent of the Liberty Union High School District—which includes high schools in Brentwood and Oakley—reported the threat had been distributed to schools across the state. 
+    Locally, at least LUHSD, Brentwood Union School District, Antioch Unified School District, Pittsburg Unified School District, Oakland Unified School District, Mt. Diablo Unified School District, along with districts in Livermore, Berkeley, Pleasanton, Hayward, the San Ramon Valley and San Mateo County alerted families after receiving threatening emails early Wednesday morning.
+    The letters claimed a bomb on campus would detonate at 1 p.m. unless all "Russian prisoners and captives and persons from all U.S. jails, prisons and institutions" were released.
+    The districts immediately notified their local police departments and worked together to verify that the threat was not credible.</p> 
+    <h6>Article by CBS News</h6>
 </body>
 </html>
