--- a/changelog.html
+++ b/changelog.html
@@ -8,9 +8,10 @@
     <script src="/assets/navigationLoader.js"></script>
     <title>Cosmic City | Changes</title>
 </head>
-<body>
-    <h5>Update 1.0.0 4/16-4/26</h5>
-    <p>Made the website added a few things to it</p>
-
+<main>
+  <body>
+      <h5>Update 1.0.0 4/16-4/26</h5>
+      <p>Made the website added a few things to it</p>
+    </main>
 </body>
 </html>
