--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         We'd love to welcome you to the online city for for hanging out, playing
         games, And just having fun in general!
       </p>
-      <div>hi</div>
+      <footer>This is a website made by Cosmic,NathanielRZ and CustomGamesYT</footer>
     </main>
   </body>
 </html>
