--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="/logo.svg" type="image/svg" />
     <link rel="stylesheet" href="/styles.css" />
-    <script src="/assets/navigationLoader.js"></script>
+    <script src="/assets/navigationLoader.js" type="module"></script>
     <title>Cosmic City</title>
   </head>
   <body>
